# CenterNet-TensorRT

./: CMakeLists.txt  LICENSE  README.md  tensorrt-plugin  test.cc
DCNv2/: test.py
DCNv2/src/: vision.cpp
DCNv2/src/cuda/: dcn_v2_im2col_cuda.cu
common/: logging.h
detection/: ctdet_infer.cpp
include/: base.hpp  ctdet_kernels.hpp  custom.hpp  decode.hpp  det_kernels.hpp  gpu_common.cuh  gpu_sort.hpp  infer.hpp  process.hpp  sharedmem.hpp  topk_cpu.hpp  topk_gpu.hpp
onnx-tensorrt/: CMakeLists.txt  ModelImporter.cpp  ResizeBind.cpp  ResizeNearest.hpp  builtin_op_importers.cpp  builtin_plugins.cpp  main.cpp  nv_onnx_parser_bindings.py  nv_onnx_parser_bindings_wrap.cpp  onnx2trt_utils.hpp  onnx_backend_test.py  onnx_backend_test_custom.py  onnx_utils.hpp  trt_utils.hpp
onnx-tensorrt/onnx_tensorrt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
onnx-tensorrt/plugin/: CMakeLists.txt  README.md  cublas_test.cu  my_upsampling.py  toy.trt
onnx-tensorrt/plugin/DCN/: CMakeLists.txt  README.md  dcn_v2.cu  dcn_v2.hpp  dcn_v2_psroi_pooling_cuda.cu  test.cc  test_infer.cpp
onnx-tensorrt/plugin/Resize_v0/: CMakeLists.txt  ResizeBilinear.cu  ResizeBilinear.hpp  test.cc
onnx-tensorrt/plugin/Resize_v1/: CMakeLists.txt  README.md  ResizeBilinear.cu  ResizeBilinear.hpp
plugins_py/DCNv2/: dcn_v2.py  setup.py  test_onnx.py
pose_estimation/: pose_infer.cpp
src/: ctdet_infer.cpp  ctdet_kernels.cu  custom.cpp  decode.cu  det_kernels.cu  gpu_sort.cu  pose_infer.cpp  preprocess.cu  test.cc  topk_cpu.cpp  topk_gpu.cu  warp_affine.cu
test/: test.cc  test_include.hpp  topk_cpu.cpp  topk_gpu.cu  warp_affine.cu
